--- a/cache.ini
+++ b/cache.ini
@@ -1,1 +1,1 @@
-C:\Users\tom_m_000\Documents\Workspace\PokemonWalking\res\area\testC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\Desktop
+C:\Users\tom_m_000\Documents\Workspace\PokemonWalking\res\area\testC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\DesktopC:\Users\tom_m_000\Desktop
