If file contents of the cache is storing incorrect file path, the Level Editor will automatically delete the cache.

--- a/cache.ini
+++ b/cache.ini
@@ -1,2 +1,2 @@
-d:\Documents\JavaProjects\NewWalking
-d:\Documents\JavaProjects\NewWalking
+D:\Documents\JavaProjects\PokemonWalking
+D:\Documents\JavaProjects\PokemonWalking
