--- a/levelEditor/build.gradle
+++ b/levelEditor/build.gradle
@@ -15,5 +15,14 @@ dependencies {
 	implementation project(":game")
 }
 
+//Need to get the sprites.
+sourceSets {
+	main {
+		resources {
+			srcDirs = ["../common/src/main/resources"]
+		}
+	}
+}
+
 //With the plugin "application" added, we need to specify the class name where the "main" method resides in.
 mainClassName = "editor.LevelEditor"
