Refactored some more code. Added working Obstacles. Successfully made Sign, with dialogues.

--- a/levelEditor/cache.ini
+++ b/levelEditor/cache.ini
@@ -1,2 +1,1 @@
-D:\Documents\JavaProjects\PokemonWalking\levelEditor
-D:\Documents\JavaProjects\PokemonWalking\levelEditor
+D:\Documents\JavaProjects\PokemonWalking\common\src\main\resources\art\area\test
