Updated documentation. We now have Characters/NPCs.

--- a/levelEditor/cache.ini
+++ b/levelEditor/cache.ini
@@ -1,1 +1,2 @@
-D:\Documents\JavaProjects\PokemonWalking\common\src\main\resources\art\area\test
+D:\Documents\JavaProjects\PokemonWalking\levelEditor
+D:\Documents\JavaProjects\PokemonWalking\levelEditor
