--- a/common/.settings/org.eclipse.buildship.core.prefs
+++ b/common/.settings/org.eclipse.buildship.core.prefs
@@ -1,2 +1,13 @@
-connection.project.dir=..
+arguments=
+auto.sync=false
+build.scans.enabled=false
+connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(D\:\\Gradle\\gradle-6.1.1))
+connection.project.dir=
 eclipse.preferences.version=1
+gradle.user.home=
+java.home=D\:/Java/jdk-12.0.1
+jvm.arguments=
+offline.mode=false
+override.workspace.settings=true
+show.console.view=true
+show.executions.view=true
