--- a/levelEditor/.settings/org.eclipse.buildship.core.prefs
+++ b/levelEditor/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(D\:\\Gradle\\gradle-6.1.1))
-connection.project.dir=../common
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=D\:/Java/jdk-12.0.1
