--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=levelEditor
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=D\:/Java/jdk-12.0.1
