--- a/game/.project
+++ b/game/.project
@@ -27,4 +27,15 @@
 			<location>D:/Documents/JavaProjects/PokemonWalking/common/src/main/resources</location>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1627090007881</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
