Updated Gradle build manifest. Added "How to build" guide in README.md. Removed unnecessary files.

--- a/levelEditor/build.gradle
+++ b/levelEditor/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 // Enable gradle to compile source code in UTF-8 encoding.
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+	options.encoding = 'UTF-8'
 }
 
 //Specify the dependencies here.
 dependencies {
-	compileOnly project(":common")
+	implementation project(":common")
 	implementation project(":game")
 }
 
@@ -22,6 +22,23 @@ sourceSets {
 			srcDirs = ["../common/src/main/resources"]
 		}
 	}
+}
+
+//Executable JAR
+jar {
+	archiveFileName = "editor.jar"
+	manifest {
+		attributes 'Main-Class': "editor.LevelEditor"
+	}
+	from {
+		configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
+
+//Duplicate strategy
+tasks.withType(Jar) { 
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE 
 }
 
 //With the plugin "application" added, we need to specify the class name where the "main" method resides in.
