--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"java.format.settings.url": ".vscode\\eclipse-formatter.xml"
+	"java.format.settings.url": ".vscode\\eclipse-formatter.xml",
+	"java.configuration.updateBuildConfiguration": "automatic"
 }
