Replaced jcenter() with mavenCentral(). jcenter() closed down in February 2021. Updated levelEditor/.classpath.

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 //This applies to all sub-projects as well as the root project
 allprojects {
 	repositories {
-		jcenter()
+		mavenCentral()
 	}
 }
 
