--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,11 @@
 plugins {
 	id "java"
 }
+
+// Common dependencies go here
+allprojects {
+	dependencies {
+		// https://mvnrepository.com/artifact/org.json/json
+		implementation group: 'org.json', name: 'json', version: '20210307'
+	}
+}
